[package]
name = "dating_questions_bot"
version = "1.0.1"
authors = ["Kirill Konchenko <konchenko.k@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.1", features = ["json"] }
tokio = { version = "1.2.0", features = ["full"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
redis = "0.20.0"
rand = "0.8.3"
log = "0.4.14"
simple_logger = "1.11.0"